# aiinstaller

./: .env.example  .gitignore  Makefile  README.md  create_issues_from_json.py  graphql_create_fields.py  init_github_board.sh  pyproject.toml
data/: epics.json  project_meta.json  project_plan.json  scrum_board.json  sprints.json  stories.json  views.json
docs/: output_template.md  project_analysis_report.md  recommended_architecture.md
prompts/: README.md  prompt_generate_sync_tool.md  prompt_repo_summary.md  prompt_validate_project_plan.md
prompts/analysis/: prompt_data_analysis.md  prompt_repo_summary.md
prompts/implementation/: prompt_bidirectional_sync.md  prompt_cli_design.md  prompt_generate_sync_tool.md  prompt_oauth_fastapi.md  prompt_visualization_component.md
prompts/validation/: prompt_test_strategy.md  prompt_validate_project_plan.md
src/adapters/github/: client.py  github_client_readme.md  github_issues.py  github_projects.py
src/core/: domain_models.py  schemas.py
src/services/: validation_service.py
