[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmac-sync"
version = "0.1.0"
description = "Project Management as Code synchronization tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "PMaC Team", email = "example@example.com" }
]

dependencies = [
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
pmac-sync = "src.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
    "black>=21.5b2",
    "isort>=5.9.1",
    "pylint>=2.8.3",
    "mypy>=0.812",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
